--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
           <div class="content">
             <h2>Sobre os Projetos</h2>
             <article class="artigo-sobre">
-                <img src="img/imagem-seção-sobre.jpg" alt="Homem exibindo objeto para um grupo de pessoas">
+                <picture>
+                    <source media="(max-width: 1199px)" srcset="img/sobre-2.jpg">
+                    <img src="img/imagem-seção-sobre.jpg" alt="Homem exibindo objeto para um grupo de pessoas">
+                </picture>
                 <div class="artigo-text-sobre">
                     <h3>Participantes</h3>
                     <h3>Mais de 80 alunos organizados em 16 grupos</h3>
